# worklog

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts  sonar-project.properties
.beads/: metadata.json
.claude/: settings.json
.claude/agents/: code-reviewer.md  coder.md  test-runner.md
.claude/hooks/: run-precommit.py
.claude/rules/: agent-delegation.md  git-workflow.md  rust-style.md  testing.md
.claude/skills/restart-server/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/wrapup/: SKILL.md
.github/workflows/: ci.yml
docs/design/: revision-history.md
src/: db.rs  main.rs  parser.rs  writer.rs
tests/e2e/: visual-regression.spec.ts
tests/fixtures/: index-snapshot.html
