[package]
name = "worklog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
comrak = { version = "0.36", default-features = false, features = ["shortcodes"] }
dotenvy = "0.15"
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
